--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 *{
-    font-family: 'Poppins', sans-serif;
     list-style: none;
     text-decoration: none;
     border-collapse: collapse;
@@ -8,18 +7,40 @@
     color: black;
 }
 
-.h1 {
-    font-size: 48px;
-    font-weight: 60;
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h2 {
+    font-size: 30px;
+    font-weight: 700;
+}
+
+h3 {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+h4 {
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.intro_text > h1 {
+    font-family: 'Bangers', cursive;
+    font-size: 45px;
+    font-weight: 700;
+    padding-bottom: 20px;
 }
 
 .contents1 {
+    font-family: 'Montserrat', sans-serif;
     font-size: 20px;
     font-weight: 50;
 }
 
 .intro_bg {
-    background-image: url(../images/Hero.png);
+    background-image: url(../images/Hero_revised.png);
     background-repeat: no-repeat;
     margin-left: 100px;
     width: 1280px;
@@ -66,7 +87,7 @@
 
 .intro_text {
     width: 500px;
-    margin-left: 100px;
+    margin-left: 120px;
     margin-top: 200px;
     /*background: red;*/
     text-align: center;
@@ -74,28 +95,46 @@
 
 .intro_text > h1, .intro_text > h4 {
     color: white;
+    padding-bottom: 60px;
 }
 
-/*.logo {
-    margin-top: -100px;
+.logo {
+    margin-top: 20px;
+    margin-bottom: 20px;
     margin-left: 100px;
 }
 
-.logo_png {
-    background-image: url(../images/Logo_final.png);
-    width: 230px;
-    height: 200px;
-    background-repeat: no-repeat;
-    background-size:100%;
+.logo > img {
+    margin-top: -140px;
+    padding-left: 20px;
+    width: 300px;
+}
+.mySkills {
+    margin-top: auto;
+    margin-left: 100px;
+    width: 1280px;
+    text-align: center;
 }
 
-.logo_text {
- 
-    width: 300px;
-    padding-left: 40px;
-    font-size: 16px;
-    margin-top: -80px;
-}*/
+.mySkills > h2 {
+    /*background-color: red;*/
+    margin-bottom: 20px;
+}
+
+.mySkills > h4 {
+    /*background-color: blue;*/
+    padding-top: 20px;
+    font-weight: 400;
+    padding-bottom: 20px;
+
+}
+
+.flexContainer > p {
+    /*background-color: yellow;*/
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-weight: 600;
+}
 
 .main_text {
     margin-top: auto;
@@ -114,10 +153,17 @@
     text-align: center;
 }
 
-.contents > li {
+.contents > .CaseStudy {
     flex: 1;
     height: 302px;
-    background: lightgrey;
+    background-image: url(../images/CRA.png);
+    margin-top: 50px;
+}
+
+.contents > .CaseStudy2 {
+    flex: 1;
+    height: 302px;
+    background-image: url(../images/Dogs_draft.png);
     margin-top: 50px;
 }
 
@@ -126,9 +172,8 @@
 }
 
 .contents > .CaseStudy > .CRA {
-    flex: 40%;
-    background-image: url(../images/icon0.png);
-    background-size: 60%;
+    flex: 43%;
+    background-size: 100%;
     height: 302px;
     background-repeat: no-repeat;
     margin-left: 50px;
@@ -140,13 +185,13 @@
 }
 
 .CRA_text {
-    flex: 60%;
+    flex: 57%;
     margin-right: 15px;
-    margin-top: 60px;
+    margin-top: 80px;
 }
 
-.CRA_text > h2 {
-    margin-bottom: 20px;
+.CRA_text > h3, .Dogs_text > h3, .Phonebox_text > h3, .Travel_text > h3 {
+    margin-bottom:30px;
 }
 
 .CaseStudy2 {
@@ -154,18 +199,13 @@
 }
 
 .Dogs_text {
-    flex: 60%;
+    flex: 57%;
     margin-right: 15px;
-    margin-top: 60px;
-}
-
-.Dogs_text > h2 {
-    margin-bottom: 20px;
+    margin-top: 80px;
 }
 
 .contents > .CaseStudy2 > .Dogs {
-    flex: 40%;
-    background-image: url(../images/icon0.png);
+    flex: 43%;
     background-size: 60%;
     height: 302px;
     background-repeat: no-repeat;
@@ -189,10 +229,17 @@
     text-align: center;
 }
 
-.contents2 > li {
+.contents2 > .CaseStudy3 {
     flex: 1;
     height: 302px;
-    background: lightgrey;
+    background-image: url(../images/email_draft.png);
+    margin-top: 50px;
+}
+
+.contents2 > .CaseStudy4 {
+    flex: 1;
+    height: 302px;
+    background-image: url(../images/travel_draft.png);
     margin-top: 50px;
 }
 
@@ -201,8 +248,7 @@
 }
 
 .contents2 > .CaseStudy3 > .Phonebox {
-    flex: 40%;
-    background-image: url(../images/icon0.png);
+    flex: 43%;
     background-size: 60%;
     height: 302px;
     background-repeat: no-repeat;
@@ -215,9 +261,9 @@
 }
 
 .Phonebox_text {
-    flex: 60%;
+    flex: 57%;
     margin-right: 15px;
-    margin-top: 60px;
+    margin-top: 80px;
 }
 
 .Phonebox_text > h2 {
@@ -229,18 +275,17 @@
 }
 
 .Travel_text {
-    flex: 60%;
+    flex: 57%;
     margin-right: 15px;
-    margin-top: 60px;
+    margin-top: 80px;
 }
 
 .Travel_text > h2 {
     margin-bottom: 20px;
 }
 
-.contents > .CaseStudy4 > .Travel {
-    flex: 40%;
-    background-image: url(../images/icon0.png);
+.contents > .CaseStudy2 > .Dogs {
+    flex: 43%;
     background-size: 60%;
     height: 302px;
     background-repeat: no-repeat;
@@ -256,7 +301,7 @@
     margin-left: 100px;
 }
 
-.logo_story > h1 {
+.logo_story > h2 {
     text-align: center;
     margin-top: 50px;
     margin-bottom:50px;
@@ -313,6 +358,7 @@
     text-align: center;
     margin-top: 20px;
     margin-left: 100px;
+    margin-bottom: 20px;
 }
 
 .footer_content > h3 {
