--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ h4 {
     padding-left: 20px;
     width: 300px;
 }
+
 .mySkills {
     margin-top: auto;
     margin-left: 100px;
@@ -146,11 +147,12 @@ h4 {
 }
 
 .contents {
-    display: flex;
+    display: grid;
     width: 1280px;
-    background: white;
     margin: auto;
-    text-align: center;
+    grid-template-areas: 
+    'CRA Dogs'
+    'Phonebox Travel';
 }
 
 .contents > .CaseStudy {
@@ -172,6 +174,7 @@ h4 {
 }
 
 .contents > .CaseStudy > .CRA {
+    grid-area: CRA;
     flex: 43%;
     background-size: 100%;
     height: 302px;
@@ -180,33 +183,40 @@ h4 {
     margin-top: 35px;
 }
 
-.CaseStudy {
+.CaseStudy, .CaseStudy2, .CaseStudy3, .CaseStudy4 {
     display: flex;
-}
+ } 
 
 .CRA_text {
     flex: 57%;
-    margin-right: 15px;
-    margin-top: 80px;
+    margin-right: 20px;
+    margin-top: 60px;
 }
 
 .CRA_text > h3, .Dogs_text > h3, .Phonebox_text > h3, .Travel_text > h3 {
     margin-bottom:30px;
 }
 
-.CaseStudy2 {
-    display: flex;
-}
-
 .Dogs_text {
     flex: 57%;
-    margin-right: 15px;
-    margin-top: 80px;
+    margin-right: 20px;
+    margin-top: 60px;
 }
 
 .contents > .CaseStudy2 > .Dogs {
+    grid-area: Dogs;
     flex: 43%;
-    background-size: 60%;
+    background-size: 100%;
+    height: 302px;
+    background-repeat: no-repeat;
+    margin-left: 50px;
+    margin-top: 35px;
+}
+
+.contents > .CaseStudy4 > .Travel {
+    grid-area: Travel;
+    flex: 43%;
+    background-size: 100%;
     height: 302px;
     background-repeat: no-repeat;
     margin-left: 50px;
@@ -221,63 +231,46 @@ h4 {
     /*background: skyblue;*/
 }
 
-.contents2 {
-    display: flex;
-    width: 1280px;
-    background: white;
-    margin: auto;
-    text-align: center;
-}
-
-.contents2 > .CaseStudy3 {
+.contents > .CaseStudy3 {
     flex: 1;
     height: 302px;
     background-image: url(../images/email_draft.png);
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
-.contents2 > .CaseStudy4 {
+.contents > .CaseStudy4 {
     flex: 1;
     height: 302px;
     background-image: url(../images/travel_draft.png);
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
-.contents2 > li:not(:last-child) {
-    margin-right: 20px;
-}
 
-.contents2 > .CaseStudy3 > .Phonebox {
+
+.contents > .CaseStudy3 > .Phonebox {
+    grid-area: Phonebox;
     flex: 43%;
-    background-size: 60%;
+    background-size: 100%;
     height: 302px;
     background-repeat: no-repeat;
     margin-left: 50px;
     margin-top: 35px;
 }
 
-.CaseStudy3 {
-    display: flex;
-}
-
 .Phonebox_text {
     flex: 57%;
-    margin-right: 15px;
-    margin-top: 80px;
+    margin-right: 20px;
+    margin-top: 60px;
 }
 
 .Phonebox_text > h2 {
     margin-bottom: 20px;
 }
 
-.CaseStudy4 {
-    display: flex;
-}
-
 .Travel_text {
     flex: 57%;
-    margin-right: 15px;
-    margin-top: 80px;
+    margin-right: 20px;
+    margin-top: 60px;
 }
 
 .Travel_text > h2 {
@@ -363,4 +356,27 @@ h4 {
 
 .footer_content > h3 {
     margin-bottom: 20px;
+}
+
+button {
+    margin-top: 15px;
+    background-color: lightgrey;
+    border: none;
+    color: black;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+@media only screen and (max-width:600px) {
+    .Contents {
+        grid-template-areas:
+        "CRA"
+        "Dogs"
+        "Phonebox"
+        "Travel";
+    }
 }
