--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,7 @@ h4 {
     height: 302px;
     background-image: url(../images/CRA.png);
     margin-top: 50px;
+    background-repeat: no-repeat;
 }
 
 .contents > .CaseStudy2 {
@@ -167,6 +168,7 @@ h4 {
     height: 302px;
     background-image: url(../images/Dogs_draft.png);
     margin-top: 50px;
+    background-repeat: no-repeat;
 }
 
 .contents > li:not(:last-child) {
@@ -236,6 +238,7 @@ h4 {
     height: 302px;
     background-image: url(../images/email_draft.png);
     margin-top: 20px;
+    background-repeat: no-repeat;
 }
 
 .contents > .CaseStudy4 {
@@ -243,6 +246,7 @@ h4 {
     height: 302px;
     background-image: url(../images/travel_draft.png);
     margin-top: 20px;
+    background-repeat: no-repeat;
 }
 
 
